--- a/assets/coomonCss.css
+++ b/assets/coomonCss.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 .title .title_intro {
     width: 4px;
     height: 18px;
@@ -21,4 +26,25 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+}
+
+.right_info {
+    position: absolute;
+    right: 20px;
+}
+
+.right_info .info_font {
+    color: #999999;
+}
+
+.clickable {
+    cursor: pointer;
+}
+
+.wallpaper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-attachment: fixed;
+    background-color: #f4f4f4;
 }
