--- a/index/index.css
+++ b/index/index.css
@@ -7,13 +7,6 @@
     width: 100%;
 }
 
-.wallpaper {
-    width: 100%;
-    position: absolute;
-    background-attachment: fixed;
-    background-color: #f4f4f4;
-}
-
 .nav_bar {
     width: 100%;
 }
@@ -50,7 +43,7 @@
 
 .goods {
     display: grid;
-    grid-template-columns: repeat(auto-fill,200px);
+    grid-template-columns: repeat(auto-fill, 200px);
     grid-gap: 20px 20px;
     justify-content: space-between;
 }
@@ -100,4 +93,35 @@
     font-size: 14px;
     overflow: hidden;
     height: 24px;
+}
+
+.tools_bar {
+    position: fixed;
+    text-align: center;
+    padding: 5px;
+    bottom: 2vh;
+    right: 2vw;
+    width: 100px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 10px rgba(201, 201, 201, 0.26);
+}
+
+.tools_bar .btn {
+    cursor: pointer;
+    padding: 10px;
+    font-size: 14px;
+    color: #999999;
+    transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+}
+
+.tools_bar .btn:hover {
+    color: #333333;
+    transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    -webkit-transform: scale(1.2);
 }
