--- a/assets/coomonCss.css
+++ b/assets/coomonCss.css
@@ -3,6 +3,11 @@
     margin: 0;
 }
 
+body {
+    background-attachment: fixed;
+    background-color: #f4f4f4;
+}
+
 .title .title_intro {
     width: 4px;
     height: 18px;
@@ -39,12 +44,4 @@
 
 .clickable {
     cursor: pointer;
-}
-
-.wallpaper {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-attachment: fixed;
-    background-color: #f4f4f4;
 }
