--- a/Profiles/Profiles.css
+++ b/Profiles/Profiles.css
@@ -48,6 +48,17 @@
     justify-content: space-between;
 }
 
+.goods_header {
+    background-color: #e8e8e8;
+    padding: 5px 10px;
+    display: flex;
+    align-items: center;
+}
+
+.shop_name {
+    margin-left: 10px;
+}
+
 .order_content {
     padding: 10px;
     display: flex;
@@ -56,6 +67,23 @@
     -o-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -webkit-transition: all 0.2s ease-in-out;
+}
+
+.goods_content {
+    padding: 10px;
+    display: flex;
+    transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+}
+
+.goods_logo {
+    cursor: pointer;
+    width: 100px;
+    height: 100px;
+    background-color: antiquewhite;
+    border-radius: 4px;
 }
 
 .order_content:hover {
@@ -74,6 +102,17 @@
     line-height: 24px;
 }
 
+.goods_container {
+    margin-left: 10px;
+    line-height: 24px;
+    width: 60%;
+}
+
+.counter {
+    display: flex;
+    align-items: center;
+}
+
 .order_title {
     font-weight: 500;
     font-size: 14px;
@@ -87,3 +126,63 @@
     font-size: 12px;
 }
 
+.collect_container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 170px);
+    grid-gap: 20px 20px;
+    justify-content: space-between;
+}
+
+.collect_block {
+    text-align: center;
+    width: 150px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.collect_block:hover .block_pic {
+    transform: scale(1.03);
+    -o-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+}
+
+.block_pic {
+    width: 150px;
+    height: 150px;
+    border-radius: 4px;
+    background-color: bisque;
+    transition: all 0.1s linear;
+    -o-transition: all 0.1s linear;
+    -moz-transition: all 0.1s linear;
+    -webkit-transition: all 0.1s linear;
+}
+
+.block_title {
+    margin-top: 5px;
+}
+
+.block_price {
+    color: #CA4555;
+}
+
+.decrease, .increase {
+    font-size: 20px;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+.counter-input {
+    width: 50px;
+    text-align: center;
+}
+
+.total-price {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    color: #CA4555;
+    justify-content: flex-end;
+    margin-right: 20px;
+    flex: 1;
+}
