--- a/Profiles/Profiles.css
+++ b/Profiles/Profiles.css
@@ -186,3 +186,18 @@
     margin-right: 20px;
     flex: 1;
 }
+
+.totalPrice {
+    position: fixed;
+    bottom: 0;
+    right: 20px;
+    left: 170px;
+    background-color: #ffffff;
+    box-shadow: 0 -2px 10px 0 rgba(217, 217, 217, 0.5);
+    padding: 15px 20px;
+    border-top: #e8e8e8 1px solid;
+    text-align: right;
+    font-size: 18px;
+}
+
+
